tests/fixtures/positive/naming/VariableNaming.kt
package com.example.naming

fun example() {
    val BadName = 1
    var AnotherBad = "wrong"
    val X = 42
}
