tests/fixtures/negative/naming/ClassNaming.kt
package com.example.naming

class GoodClass {
    fun doSomething() {}
}

class AnotherGoodClass {
    val x = 1
}
